# subset_sum_problem

./: .gitignore  README.md  package.json  subset_sum.js  subset_sum.test.js
c++/: CMakeLists.txt  main.cpp  prln.pl  subset_sum.cpp  subset_sum.hpp
c++/tests/: subset_sumTest.cpp
